# PPMImage_Gradient

./: CMakeLists.txt  README.md
include/: pragmas.h
include/graphics/: Color.h
include/graphics/images/: PPMImage.h
include/math/: Rectangle.h  Vector2.h  Vector3.h
src/: CMakeLists.txt  main.cpp
src/graphics/: Color.cpp
src/graphics/images/: PPMImage.cpp
